Trying to figure sporatic iPhone issue with video thumbnails displaying way too short

--- a/frontend-react/src/pages/VideosPage/VideosPage.css
+++ b/frontend-react/src/pages/VideosPage/VideosPage.css
@@ -11,7 +11,6 @@
   gap: 2rem;
   flex: 0 0 auto;
   padding-right: 2rem;
-  overflow: hidden;
   position: relative;
 }
 
